--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-Coming Soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kiran Spaces - Launching Soon</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      color: #222;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80') no-repeat center center/cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+    .container {
+      background: rgba(255,255,255,0.92);
+      padding: 48px 32px 36px 32px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 400px;
+      box-shadow: 0 4px 30px rgba(0,0,0,0.08);
+    }
+    h1 {
+      margin-bottom: 24px;
+      font-size: 2.1em;
+      color: #1363c6;
+      letter-spacing: 1px;
+    }
+    h2 {
+      color: #555;
+      font-size: 1.1em;
+      margin-bottom: 20px;
+      font-weight: normal;
+    }
+    .cta {
+      margin: 24px 0;
+      font-size: 1.07em;
+      color: #333;
+    }
+    .contact-info {
+      color: #1363c6;
+      margin-top: 16px;
+      font-size: 1em;
+    }
+    .social-icons {
+      margin: 22px 0 0 0;
+    }
+    .social-icons a {
+      display: inline-block;
+      margin: 0 10px;
+      color: #1363c6;
+      text-decoration: none;
+      font-size: 1.6em;
+      transition: color 0.18s;
+    }
+    .social-icons a:hover {
+      color: #0f478d;
+    }
+    @media(max-width: 500px) {
+      .container { padding: 26px 6px 20px 6px; }
+      h1 { font-size: 1.3em; }
+    }
+  </style>
+  <!-- FontAwesome for social icons -->
+  <script src="https://kit.fontawesome.com/0b69188371.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <div class="container">
+    <h1>Kiran Spaces</h1>
+    <h2>Launching Soon: Bhubaneswar's Trusted Real Estate Destination</h2>
+    <div class="cta">
+      Our new site is coming soon. For project or property inquiries,<br>
+      contact <span class="contact-info">info@kiranspaces.com</span>.
+    </div>
+    <div>
+      <strong>Follow us:</strong>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
